# asset-allocation

./: Cargo.toml  README.md  workspace.code-workspace
src/: engine.rs  lib.rs  model.rs
tests/: allocation.toml  generic-tests.rs
