[package]
name = "asset-allocation"
description = "Asset Allocation calculation"
version = "0.1.0"
edition = "2021"
authors = ['Alen Šiljak <dev@alensiljak.eu.org>']
repository = 'https://github.com/alensiljak/asset-allocation'
license="AGPL-3.0"
readme = "README.md"
categories = ["finance"]
keywords = ["library", "finance"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
env_logger = "0.10.0"
log = "0.4.19"
serde = "1.0.167"
toml = "0.7.6"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.85"
wasm-bindgen-test = "*"

[dev-dependencies]
test-log = "0.2.11"
